--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,9 +1,10 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
+  pull_request:
 
 permissions:
   contents: read
@@ -14,138 +15,258 @@ env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: e-commerce-app
   CONTAINER_NAME: e-commerce-container
-
-# ======================================================
-# =============== PARALLEL SECURITY SCANS ===============
-# ======================================================
+  SONAR_PROJECT_KEY: sonar-test-e-commerce_new-sonarscan
+  SONAR_ORGANIZATION: sonar-test-e-commerce
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
 jobs:
 
+  ###########################################
+  # 1. Secret Scanning (Gitleaks)
+  ###########################################
   secret-scanning:
     name: Secret Scanning
     runs-on: ubuntu-latest
     outputs:
-      gl_count: ${{ steps.gitleaks.outputs.gl_count }}
+      gl_count: ${{ steps.count.outputs.gl_count }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Run Gitleaks
-        id: gitleaks
-        run: |
-          docker run --rm -v $PWD:/repo zricethezav/gitleaks detect --source="/repo" --no-color > gitleaks.txt || true
-          COUNT=$(cat gitleaks.txt | wc -l)
-          echo "gl_count=$COUNT" >> $GITHUB_OUTPUT
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
+        with:
+          args: detect --source . --verbose --redact --no-fail
 
+      - name: Count Gitleaks issues
+        id: count
+        run: |
+          GL_COUNT=$(gitleaks detect --source . --report-format json | jq 'length')
+          echo "gl_count=$GL_COUNT" >> $GITHUB_OUTPUT
+
+  ###########################################
+  # 2. OWASP Dependency Check
+  ###########################################
   owasp-dependency-check:
     name: OWASP Dependency-Check
     runs-on: ubuntu-latest
     outputs:
-      dc_count: ${{ steps.dc.outputs.dc_count }}
+      dc_count: ${{ steps.count.outputs.dc_count }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Run OWASP Dependency-Check
-        id: dc
-        run: |
-          docker run --rm -v "$(pwd)":/src owasp/dependency-check \
-          --scan /src --format "JSON" --out /src || true
-          COUNT=$(jq '.dependencies | length' dependency-check-report.json)
-          echo "dc_count=$COUNT" >> $GITHUB_OUTPUT
+        uses: dependency-check/Dependency-Check_Action@1.1.0
+        with:
+          project: "e-commerce-app"
+          path: "./"
+          format: "HTML"
 
+      - name: Count Dependency-Check issues
+        id: count
+        run: |
+          DC_COUNT=$(grep -i -c 'vulnerability' reports/*.html || echo 0)
+          echo "dc_count=$DC_COUNT" >> $GITHUB_OUTPUT
+
+  ###########################################
+  # 3. Checkov IaC Scan
+  ###########################################
   checkov-scan:
     name: Checkov IaC Scan
     runs-on: ubuntu-latest
     outputs:
-      ckv_count: ${{ steps.ckv.outputs.ckv_count }}
+      ckv_count: ${{ steps.count.outputs.ckv_count }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Checkov
-        id: ckv
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Checkov
+        run: pip install checkov
+
+      - name: Run Checkov scan
+        run: checkov -d infrastructure --download-external-modules true --soft-fail -o json --output-file-path checkov-report.json
+
+      - name: Count Checkov issues
+        id: count
         run: |
-          pip install checkov
-          checkov -d . --output json > checkov.json || true
-          COUNT=$(jq '.summary.failed' checkov.json)
-          echo "ckv_count=$COUNT" >> $GITHUB_OUTPUT
+          CKV_COUNT=$(jq '.results.failed_checks | length' checkov-report.json 2>/dev/null || echo 0)
+          echo "ckv_count=$CKV_COUNT" >> $GITHUB_OUTPUT
 
-# ======================================================
-# ======= SECURITY SLACK SUMMARY AFTER ALL SCANS =======
-# ======================================================
+  ###########################################
+  # 4. SonarCloud Code Analysis
+  ###########################################
+  sonarcloud-analysis:
+    name: SonarCloud Analysis
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
+            -Dsonar.organization=${{ env.SONAR_ORGANIZATION }}
+            -Dsonar.sources=.
+            -Dsonar.coverage.exclusions=Backend/server.js,aiops/**
+            -Dsonar.qualitygate.wait=true
+
+  ###########################################
+  # 5. Cache Docker Layers
+  ###########################################
+  cache-docker-layers:
+    name: Cache Docker Layers
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - name: Restore layer cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+  ###########################################
+  # 6. Build, Scan, and Push Docker Image
+  ###########################################
+  build-and-deploy:
+    name: Build, Scan, Push Docker
+    runs-on: ubuntu-latest
+    needs: [secret-scanning, owasp-dependency-check, checkov-scan, sonarcloud-analysis, cache-docker-layers]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build Docker image with cache
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: ${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          load: true
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+
+      - name: Scan Docker image with Trivy
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '0'
+
+      - uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: trivy-results.sarif
+
+      - name: Tag and push to ECR
+        run: |
+          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
+          docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:latest
+          docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:${{ github.sha }}
+          docker push $IMAGE_URI:latest
+          docker push $IMAGE_URI:${{ github.sha }}
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          IMAGE_NAME=${{ env.ECR_REPOSITORY }}
+          IMAGE_TAG=${{ github.sha }}
+          docker tag $IMAGE_NAME:$IMAGE_TAG docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
+          docker tag $IMAGE_NAME:$IMAGE_TAG docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
+
+  ###########################################
+  # 7A. Slack Notification – Success
+  ###########################################
+  notify-success:
+    name: Slack Notification – Success
+    runs-on: ubuntu-latest
+    needs: [build-and-deploy]
+    if: needs.build-and-deploy.result == 'success'
+    steps:
+      - name: Send Success Message to Slack
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data "{\"text\":\"*CI/CD Pipeline Status*\nStatus: ✅ Success\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
+          "$SLACK_WEBHOOK_URL"
+
+  ###########################################
+  # 7B. Slack Notification – Failure
+  ###########################################
+  notify-failure:
+    name: Slack Notification – Failure
+    runs-on: ubuntu-latest
+    needs: [build-and-deploy]
+    if: needs.build-and-deploy.result == 'failure'
+    steps:
+      - name: Send Failure Message to Slack
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data "{\"text\":\"*CI/CD Pipeline Status*\nStatus: ❌ Failure\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
+          "$SLACK_WEBHOOK_URL"
+
+  ###########################################
+  # 8. Slack Notification – Security Results
+  ###########################################
   notify-security:
     name: Slack Notification – Security Scan Results
     runs-on: ubuntu-latest
     needs: [secret-scanning, owasp-dependency-check, checkov-scan]
     if: always()
     steps:
-      - name: Send Security Results
+      - name: Count issues
+        id: count-issues
+        run: |
+          GL_COUNT=${{ needs.secret-scanning.outputs.gl_count }}
+          DC_COUNT=${{ needs.owasp-dependency-check.outputs.dc_count }}
+          CKV_COUNT=${{ needs.checkov-scan.outputs.ckv_count }}
+          echo "gl_count=$GL_COUNT" >> $GITHUB_ENV
+          echo "dc_count=$DC_COUNT" >> $GITHUB_ENV
+          echo "ckv_count=$CKV_COUNT" >> $GITHUB_ENV
+
+      - name: Send Security Scan Results to Slack
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          GL: ${{ needs.secret-scanning.outputs.gl_count }}
-          DC: ${{ needs.owasp-dependency-check.outputs.dc_count }}
-          CKV: ${{ needs.checkov-scan.outputs.ckv_count }}
+          GL_COUNT: ${{ env.gl_count }}
+          DC_COUNT: ${{ env.dc_count }}
+          CKV_COUNT: ${{ env.ckv_count }}
         run: |
-          STATUS=":white_check_mark: Success"
+          STATUS=$([[ "${{ job.status }}" == "success" ]] && echo "✅ Success" || echo "❌ Issues Found")
           curl -X POST -H 'Content-type: application/json' \
-          --data "{
-            \"text\": \"*Security Scan Results*\nStatus: $STATUS\nGitleaks secrets: $GL\nOWASP Dependency-Check issues: $DC\nCheckov IaC issues: $CKV\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"
-          }" \
-          "$SLACK_WEBHOOK_URL"
-
-# ======================================================
-# ======= SONARCLOUD + DOCKER BUILD IN PARALLEL ========
-# ======================================================
-
-  sonarcloud-analysis:
-    name: SonarCloud Analysis
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run SonarCloud Scan
-        run: |
-          echo "Running SonarCloud..." 
-          exit 1  # make it fail for testing
-
-  build-scan-and-push:
-    name: Build, Scan, Push Docker
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Build Docker
-        run: |
-          echo "Building docker..."
-
-
-# ======================================================
-# ================ FINAL PIPELINE NOTIFICATIONS =========
-# ======================================================
-
-  notify-success:
-    name: Slack Notification – Pipeline Success
-    runs-on: ubuntu-latest
-    needs: [sonarcloud-analysis, build-scan-and-push]
-    if: success()
-    steps:
-      - name: Send Success Message
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":\"✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
-          "$SLACK_WEBHOOK_URL"
-
-  notify-failure:
-    name: Slack Notification – Pipeline Failure
-    runs-on: ubuntu-latest
-    needs: [sonarcloud-analysis, build-scan-and-push]
-    if: failure()
-    steps:
-      - name: Send Failure Message
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":\"❌ *CI Pipeline Failed!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
+          --data "{\"text\":\"*Security Scan Results*\nStatus: $STATUS\nGitleaks secrets: $GL_COUNT\nOWASP Dependency-Check issues: $DC_COUNT\nCheckov IaC issues: $CKV_COUNT\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
           "$SLACK_WEBHOOK_URL"
