--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -185,7 +185,7 @@ jobs:
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
           exit-code: '0'
-          scan-ref: .github/workflows/CI.yml
+          scan-ref: .github/workflows/CI-CD.yml
 
       - uses: github/codeql-action/upload-sarif@v4
         with:
