--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -39,7 +39,7 @@ jobs:
         env:
           GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
         with:
-          args: detect --source . --verbose --redact --no-fail
+          args: detect --source . --verbose --redact --report-format json --report-path gitleaks-report.json --no-fail
 
       - name: Count Gitleaks issues
         id: count
