--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -39,19 +39,28 @@ jobs:
         env:
           GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
         with:
-          args: detect --source . --verbose --redact --report-format json --report-path gitleaks-report.json --no-fail
+          args: detect --source . --verbose --redact --report-format json --report-path ${{ github.workspace }}/gitleaks-report.json --no-fail
+  
+      - name: Verify Report Exists
+        run: |
+          ls -la ${{ github.workspace }}
   
       - name: Count Gitleaks issues
         id: count
         run: |
-          GL_COUNT=$(jq 'length' gitleaks-report.json)
+          if [ ! -f "${{ github.workspace }}/gitleaks-report.json" ]; then
+            echo "Missing report. Gitleaks probably cried itself to death."
+            exit 1
+          fi
+          GL_COUNT=$(jq 'length' "${{ github.workspace }}/gitleaks-report.json")
           echo "gl_count=$GL_COUNT" >> $GITHUB_OUTPUT
   
       - name: Upload Gitleaks Report
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
-          path: gitleaks-report.json
+          path: ${{ github.workspace }}/gitleaks-report.json
+
 
 
   ###########################################
